--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token":"ODIzMjc5NzUxNDIyMjc5NzEx.YFehBA.DT19LUqWpHgJA4Bu0FJ8qyZe_pE",
+    "token":"XXXXXXX",
     "prefix":"s!",
     "IdOwner":"Tale#3095",
     "CHANNEL_ID": ["UCyg5cRfsDOlr5QG9oCwsXvw"],
